feat: Car 클래스에 이름 필드와 제약조건 추가