@@ -5,7 +5,6 @@ import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -21,7 +20,7 @@ class ResultViewTest {
     @Test
     void 자동차의_현재_위치가_잘_출력되는지_테스트() {
         // Given
-        List<Car> cars = Arrays.asList(new Car(2), new Car(1), new Car(3));
+        List<Car> cars = List.of(new Car("car1", 2), new Car("car2", 1), new Car("car3", 3));
 
         // When
         ResultView.printCarStatus(cars);
